fix for post edit entry message on mobile view

--- a/wp-content/themes/makerfaire/scss/entry.scss
+++ b/wp-content/themes/makerfaire/scss/entry.scss
@@ -438,7 +438,6 @@
 	justify-content: center;
 	position: absolute !important;
 	top: 50px !important;
-	right: calc(50% - 200px);
 	font-size: 30px;
 	.ui-dialog-titlebar { display:none} 
 	#dialog-refresh {
@@ -447,6 +446,11 @@
 		justify-content: center;;
 		flex-direction: column;
 		gap:10px;
+	}
+	@media screen and (max-width: 768px) {
+		max-width: 95vw !important;
+		text-align: center;
+    	margin-top: 25px;
 	}
 }
 
